Editing the folder structure

--- a/Intro_to_TF2/TF_Linear_Regression_with_Synthetic_Data.ipynb
+++ b/Intro_to_TF2/TF_Linear_Regression_with_Synthetic_Data.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Linear Regression with Synthetic Data.ipynb",
+      "name": "Copy of Linear Regression with Synthetic Data.ipynb",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": []
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "Z1pOWL7eevO8",
         "colab_type": "code",
-        "cellView": "form",
+        "cellView": "both",
         "colab": {}
       },
       "source": [
@@ -201,9 +201,7 @@
         "The following code defines two functions:\n",
         "\n",
         "  * `build_model(my_learning_rate)`, which builds an empty model.\n",
-        "  * `train_model(model, feature, label, epochs)`, which trains the model from the examples (feature and label) you pass. \n",
-        "\n",
-        "Since you don't need to understand model building code right now, we've hidden this code cell.  You may optionally double-click the headline to explore this code."
+        "  * `train_model(model, feature, label, epochs)`, which trains the model from the examples (feature and label) you pass. "
       ]
     },
     {
@@ -211,7 +209,7 @@
       "metadata": {
         "id": "xvO_beKVP1Ke",
         "colab_type": "code",
-        "cellView": "form",
+        "cellView": "both",
         "colab": {}
       },
       "source": [
@@ -284,9 +282,7 @@
         "We're using a popular Python library called [Matplotlib](https://developers.google.com/machine-learning/glossary/#matplotlib) to create the following two plots:\n",
         "\n",
         "*  a plot of the feature values vs. the label values, and a line showing the output of the trained model.\n",
-        "*  a [loss curve](https://developers.google.com/machine-learning/glossary/#loss_curve).\n",
-        "\n",
-        "We hid the following code cell because learning Matplotlib is not relevant to the learning objectives. Regardless, you must still run all hidden code cells."
+        "*  a [loss curve](https://developers.google.com/machine-learning/glossary/#loss_curve).\n"
       ]
     },
     {
@@ -294,7 +290,7 @@
       "metadata": {
         "id": "QF0BFRXTOeR3",
         "colab_type": "code",
-        "cellView": "form",
+        "cellView": "both",
         "colab": {}
       },
       "source": [
@@ -444,7 +440,7 @@
       },
       "source": [
         "learning_rate=0.01\n",
-        "epochs= ?   # Replace ? with an integer.\n",
+        "epochs= 400   \n",
         "my_batch_size=12\n",
         "\n",
         "my_model = build_model(learning_rate)\n",
@@ -453,32 +449,6 @@
         "                                                        my_batch_size)\n",
         "plot_the_model(trained_weight, trained_bias, my_feature, my_label)\n",
         "plot_the_loss_curve(epochs, rmse)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1tWrzP4Ww7sD",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
-      },
-      "source": [
-        "#@title Double-click to view a possible solution\n",
-        "learning_rate=0.01\n",
-        "epochs=450\n",
-        "my_batch_size=12 \n",
-        "\n",
-        "my_model = build_model(learning_rate)\n",
-        "trained_weight, trained_bias, epochs, rmse = train_model(my_model, my_feature, \n",
-        "                                                         my_label, epochs,\n",
-        "                                                         my_batch_size)\n",
-        "plot_the_model(trained_weight, trained_bias, my_feature, my_label)\n",
-        "plot_the_loss_curve(epochs, rmse)\n",
-        "\n",
-        "# The loss curve suggests that the model does converge."
       ],
       "execution_count": 0,
       "outputs": []
@@ -505,7 +475,7 @@
       "source": [
         "# Increase the learning rate and decrease the number of epochs.\n",
         "learning_rate=100 \n",
-        "epochs=500 \n",
+        "epochs=50 \n",
         "\n",
         "my_model = build_model(learning_rate)\n",
         "trained_weight, trained_bias, epochs, rmse = train_model(my_model, my_feature, \n",
@@ -551,33 +521,8 @@
       },
       "source": [
         "# Set the learning rate and number of epochs\n",
-        "learning_rate= ?  # Replace ? with a floating-point number\n",
-        "epochs= ?   # Replace ? with an integer\n",
-        "\n",
-        "my_model = build_model(learning_rate)\n",
-        "trained_weight, trained_bias, epochs, rmse = train_model(my_model, my_feature, \n",
-        "                                                         my_label, epochs,\n",
-        "                                                         my_batch_size)\n",
-        "plot_the_model(trained_weight, trained_bias, my_feature, my_label)\n",
-        "plot_the_loss_curve(epochs, rmse)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_GMGgR6O54IN",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
-      },
-      "source": [
-        "#@title Double-click to view a possible solution\n",
-        "\n",
-        "learning_rate=0.14\n",
-        "epochs=70\n",
-        "my_batch_size=12\n",
+        "learning_rate= 0.03 \n",
+        "epochs= 200   \n",
         "\n",
         "my_model = build_model(learning_rate)\n",
         "trained_weight, trained_bias, epochs, rmse = train_model(my_model, my_feature, \n",
@@ -615,9 +560,9 @@
         "colab": {}
       },
       "source": [
-        "learning_rate=0.05\n",
-        "epochs=100\n",
-        "my_batch_size=12  # Replace ? with an integer.\n",
+        "learning_rate= 0.03\n",
+        "epochs= 200\n",
+        "my_batch_size=1 \n",
         "\n",
         "my_model = build_model(learning_rate)\n",
         "trained_weight, trained_bias, epochs, rmse = train_model(my_model, my_feature, \n",
@@ -625,31 +570,6 @@
         "                                                        my_batch_size)\n",
         "plot_the_model(trained_weight, trained_bias, my_feature, my_label)\n",
         "plot_the_loss_curve(epochs, rmse)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-mtVpoBrANAm",
-        "colab_type": "code",
-        "cellView": "form",
-        "colab": {}
-      },
-      "source": [
-        "#@title Double-click to view a possible solution\n",
-        "\n",
-        "learning_rate=0.05\n",
-        "epochs=125\n",
-        "my_batch_size=1 # Wow, a batch size of 1 works!\n",
-        "\n",
-        "my_model = build_model(learning_rate)\n",
-        "trained_weight, trained_bias, epochs, rmse = train_model(my_model, my_feature, \n",
-        "                                                         my_label, epochs,\n",
-        "                                                         my_batch_size)\n",
-        "plot_the_model(trained_weight, trained_bias, my_feature, my_label)\n",
-        "plot_the_loss_curve(epochs, rmse)\n"
       ],
       "execution_count": 0,
       "outputs": []
